--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-leap-day
-title: ¡Bienvenido a la pagian de inicio de Chrissvian!
+title: ¡Bienvenido a la pagina de inicio de Chrissvian!
 description: Siéntase libre de seguir esta pagina para estar al tanto de las actualizaciones de mi proyecto
